index kofst_applics

--- a/app/views/kofst_applics/index.html.slim
+++ b/app/views/kofst_applics/index.html.slim
@@ -1,27 +1,27 @@
-h1#h1_all_applics Поданные заявки
-p Скачать все анкеты: #{link_to "Excel", applics_path(format: "xls")} | #{link_to "CSV", applics_path(format: "csv")}
+h1#h1_all_kofst_applics Все анкеты
+p #{link_to "Скачать все анкеты в формате Excel", kofst_applics_path(format: "xls")}
 table class="table table-striped"
   tr
     th №
     th ФИО
     / th Работа, должность
     th Член АНТОК
-    th Направление
-    th Тип участия
+    th Научная сфера
+    th Уточненная научная сфера
     th Дата подачи (МСК)    
-    th 
+    / th 
   - var = 0
   - @applics.each do |applic|
     - var+=1
     tr
       td = var
-      td = link_to applic.fio, applic
+      td = link_to applic.english_name, applic
       / td #{applic.work_company}, #{applic.work_position}
       td = (applic.user.is_antok_member ? "Да" : "Нет")
-      td = applic.conf_section
-      td = applic.participation_type
+      td = applic.science_field.name
+      td = applic.science_specific_field.name
       td = l applic.created_at.in_time_zone("Moscow"), format: :short      
-      td = link_to 'Скачать анкету', applic_path(applic, format: :pdf)
+      / td = link_to 'Скачать анкету', applic_path(applic, format: :pdf)
 
 / ul.applics
 /   - @applics.each do |applic|
