--- a/app/views/kofst_applics/index.xls.erb
+++ b/app/views/kofst_applics/index.xls.erb
@@ -11,59 +11,165 @@
         <Cell><Data ss:Type="String">Дата подачи заявки</Data></Cell>
         <Cell><Data ss:Type="String">Член АНТОК</Data></Cell>
         <Cell><Data ss:Type="String">ID АНТОК</Data></Cell>
-        <Cell><Data ss:Type="String">ФИО</Data></Cell>
-        <Cell><Data ss:Type="String">ФИО англ.</Data></Cell>
-        <Cell><Data ss:Type="String">Дата рождения</Data></Cell>
-        <Cell><Data ss:Type="String">Пол</Data></Cell>
-        <Cell><Data ss:Type="String">Почтовый адрес</Data></Cell>
-        <Cell><Data ss:Type="String">Email</Data></Cell>
-        <Cell><Data ss:Type="String">Телефоны</Data></Cell>
-        <Cell><Data ss:Type="String">Институт</Data></Cell>
-        <Cell><Data ss:Type="String">Почтовый адрес института</Data></Cell>
-        <Cell><Data ss:Type="String">Специальность в институте</Data></Cell>
-        <Cell><Data ss:Type="String">Ученая степень</Data></Cell>
-        <Cell><Data ss:Type="String">Компания</Data></Cell>
-        <Cell><Data ss:Type="String">Года начала работы</Data></Cell>
-        <Cell><Data ss:Type="String">Подразделение</Data></Cell>
-        <Cell><Data ss:Type="String">Должность</Data></Cell>
-        <Cell><Data ss:Type="String">Специализация на работе</Data></Cell>
-        <Cell><Data ss:Type="String">Участие в общественных орг.</Data></Cell>
-        <Cell><Data ss:Type="String">Ближайшее подразделение АНТОК</Data></Cell>
-        <Cell><Data ss:Type="String">Область научных интересов</Data></Cell>
-        <Cell><Data ss:Type="String">Тема доклада</Data></Cell>
-        <Cell><Data ss:Type="String">Направление</Data></Cell>
-        <Cell><Data ss:Type="String">Соавторы</Data></Cell>
-        <Cell><Data ss:Type="String">Тип участия</Data></Cell>
+        <Cell><Data ss:Type="String">applic_language</Data></Cell>
+        <Cell><Data ss:Type="String">korean_name</Data></Cell>
+        <Cell><Data ss:Type="String">english_name</Data></Cell>
+        <Cell><Data ss:Type="String">gender</Data></Cell>
+        <Cell><Data ss:Type="String">birth_date</Data></Cell>
+        <Cell><Data ss:Type="String">job_type</Data></Cell>
+        <Cell><Data ss:Type="String">job_organization</Data></Cell>
+        <Cell><Data ss:Type="String">job_department</Data></Cell>
+        <Cell><Data ss:Type="String">job_position</Data></Cell>
+        <Cell><Data ss:Type="String">job_email</Data></Cell>
+        <Cell><Data ss:Type="String">job_phone</Data></Cell>
+        <Cell><Data ss:Type="String">science_field</Data></Cell>
+        <Cell><Data ss:Type="String">science_specific_field</Data></Cell>
+        <Cell><Data ss:Type="String">mobile</Data></Cell>
+        <Cell><Data ss:Type="String">address</Data></Cell>
+        <Cell><Data ss:Type="String">country</Data></Cell>
+        <Cell><Data ss:Type="String">kofst_association</Data></Cell>
+        <Cell><Data ss:Type="String">nationality</Data></Cell>
+        <Cell><Data ss:Type="String">final_academic_degree</Data></Cell>
+
+        <Cell><Data ss:Type="String">e_period1</Data></Cell>
+        <Cell><Data ss:Type="String">e_degree1</Data></Cell>
+        <Cell><Data ss:Type="String">e_university1</Data></Cell>
+        <Cell><Data ss:Type="String">e_major1</Data></Cell>
+        <Cell><Data ss:Type="String">e_period2</Data></Cell>
+        <Cell><Data ss:Type="String">e_degree2</Data></Cell>
+        <Cell><Data ss:Type="String">e_university2</Data></Cell>
+        <Cell><Data ss:Type="String">e_major2</Data></Cell>
+        <Cell><Data ss:Type="String">e_period3</Data></Cell>
+        <Cell><Data ss:Type="String">e_degree3</Data></Cell>
+        <Cell><Data ss:Type="String">e_university3</Data></Cell>
+        <Cell><Data ss:Type="String">e_major3</Data></Cell>     
+        <Cell><Data ss:Type="String">e_period4</Data></Cell>
+        <Cell><Data ss:Type="String">e_degree4</Data></Cell>
+        <Cell><Data ss:Type="String">e_university4</Data></Cell>
+        <Cell><Data ss:Type="String">e_major4</Data></Cell>  
+        <Cell><Data ss:Type="String">e_period5</Data></Cell>
+        <Cell><Data ss:Type="String">e_degree5</Data></Cell>
+        <Cell><Data ss:Type="String">e_university5</Data></Cell>
+        <Cell><Data ss:Type="String">e_major5</Data></Cell> 
+
+        <Cell><Data ss:Type="String">p_period1</Data></Cell>
+        <Cell><Data ss:Type="String">p_organization1</Data></Cell>
+        <Cell><Data ss:Type="String">p_position1</Data></Cell>
+        <Cell><Data ss:Type="String">p_business_in_charge1</Data></Cell>
+        <Cell><Data ss:Type="String">p_period2</Data></Cell>
+        <Cell><Data ss:Type="String">p_organization2</Data></Cell>
+        <Cell><Data ss:Type="String">p_position2</Data></Cell>
+        <Cell><Data ss:Type="String">p_business_in_charge2</Data></Cell>
+        <Cell><Data ss:Type="String">p_period3</Data></Cell>
+        <Cell><Data ss:Type="String">p_organization3</Data></Cell>
+        <Cell><Data ss:Type="String">p_position3</Data></Cell>
+        <Cell><Data ss:Type="String">p_business_in_charge3</Data></Cell>
+        <Cell><Data ss:Type="String">p_period4</Data></Cell>
+        <Cell><Data ss:Type="String">p_organization4</Data></Cell>
+        <Cell><Data ss:Type="String">p_position4</Data></Cell>
+        <Cell><Data ss:Type="String">p_business_in_charge4</Data></Cell>
+        <Cell><Data ss:Type="String">p_period5</Data></Cell>
+        <Cell><Data ss:Type="String">p_organization5</Data></Cell>
+        <Cell><Data ss:Type="String">p_position5</Data></Cell>
+        <Cell><Data ss:Type="String">p_business_in_charge5</Data></Cell>                        
+        <Cell><Data ss:Type="String">a_publications</Data></Cell>
+        <Cell><Data ss:Type="String">a_awards</Data></Cell>
+        <Cell><Data ss:Type="String">a_patents</Data></Cell>
+        <Cell><Data ss:Type="String">a_research_activites</Data></Cell>
+
+        <Cell><Data ss:Type="String">area_of_interest</Data></Cell>
+        <Cell><Data ss:Type="String">i_joint_research</Data></Cell>
+        <Cell><Data ss:Type="String">i_research_and_consulting</Data></Cell>
+        <Cell><Data ss:Type="String">i_job</Data></Cell>
+        <Cell><Data ss:Type="String">i_starting_a_business</Data></Cell>
+        <Cell><Data ss:Type="String">i_lecture</Data></Cell>
+        <Cell><Data ss:Type="String">i_internation_conference</Data></Cell>
+        <Cell><Data ss:Type="String">i_seminar</Data></Cell>
+        <Cell><Data ss:Type="String">i_information_interaction</Data></Cell>
+        <Cell><Data ss:Type="String">i_others</Data></Cell>
       </Row>
     <% @applics.each do |applic| %>
       <Row>
         <Cell><Data ss:Type="String"><%= applic.id %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.created_at.strftime("%d.%m.%Y") %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.user.is_antok_member ? "Да" : "Нет" %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.user.is_antok_member ? "Yes" : "No" %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.user.antok_id %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.fio %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.fio_eng %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.applic_language %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.korean_name %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.english_name %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.gender %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.birth_date %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.sex %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.post_address %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.email %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.phones %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.edu_institute %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.edu_institute_address %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.edu_specialization %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.uch_stepen %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.work_company %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.work_start_year %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.work_department %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.work_position %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.work_specialization %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.public_organizations %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.antok_city %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.science_interests %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.conf_topic %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.conf_section %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.conf_coauthors %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.participation_type %></Data></Cell>      
+        <Cell><Data ss:Type="String"><%= applic.job_type %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.job_organization %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.job_department %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.job_position %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.job_email %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.job_phone %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.science_field.name %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.science_specific_field.name %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.mobile %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.address %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.country %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.kofst_association %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.nationality %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.final_academic_degree %></Data></Cell>
+
+        <Cell><Data ss:Type="String"><%= applic.e_period1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_degree1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_university1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_major1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_period2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_degree2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_university2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_major2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_period3 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_degree3 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_university3 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_major3 %></Data></Cell>     
+        <Cell><Data ss:Type="String"><%= applic.e_period4 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_degree4 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_university4 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_major4 %></Data></Cell>  
+        <Cell><Data ss:Type="String"><%= applic.e_period5 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_degree5 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_university5 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.e_major5 %></Data></Cell> 
+
+        <Cell><Data ss:Type="String"><%= applic.p_period1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_organization1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_position1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_business_in_charge1 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_period2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_organization2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_position2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_business_in_charge2 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_period3 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_organization3 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_position3 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_business_in_charge3 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_period4 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_organization4 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_position4 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_business_in_charge4 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_period5 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_organization5 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_position5 %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.p_business_in_charge5 %></Data></Cell>                        
+        <Cell><Data ss:Type="String"><%= applic.a_publications %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.a_awards %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.a_patents %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.a_research_activites %></Data></Cell>
+
+        <Cell><Data ss:Type="String"><%= applic.area_of_interest %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_joint_research %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_research_and_consulting %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_job %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_starting_a_business %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_lecture %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_internation_conference %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_seminar %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_information_interaction %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.i_others %></Data></Cell>    
       </Row>
     <% end %>
     </Table>
