--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,7 @@
             <div class="buttonsclass">
               <% if user_signed_in? %>
                 <% if current_user.has_role? :admin %>
+                  <p><%= link_to "Смотреть все анкеты", kofst_applics_path, class: "btn btn-large btn-success"%></p>                
                   <p><%= link_to "Смотреть все заявки", applics_path, class: "btn btn-large btn-success"%></p>
                   <p><%= link_to "Отправка сообщений", messages_path, class: "btn btn-large btn-success"%></p>
                   <p><%= link_to "Мониторинг отправки", "resque", class: "btn btn-large btn-success", target: "_blank"%></p>
