--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,12 +2,16 @@
       <div class="jumbotron">
         <div class="row">
           <div class="span7">
-            <p style="text-align:center;"><b><%= t(:welcome_myaksts)%></b></p>
+            <!--p style="text-align:center;"><b><%= t(:welcome_myaksts)%></b></p-->
             <p style="text-align:center;">
               <% if params[:locale]=='en' %>
                 Personal AKSTS member page helps to automate interaction for conference and seminars!
               <% else %>
-                Личный кабинет поможет нам автоматизировать работу по участию в конференциях семинарах и обмену актуальной информацией!
+                <p style="text-align:center;"><b>КОНФЕРЕНЦИЯ 2015 УЖЕ СКОРО!!!</b></p>
+                <p>Определены сроки проведения Ежегодной конференции по науке и технологиям, проводимой АНТОК - с 19 по 21 июля 2015 года.</p>
+                <p>Место поведения конференции - Москва или ближнее Подмосковье. Конференция планируется в формате СНГ - Корея. В ближайшее время будет открыта онлайн регистрация участников конференции и объявлен сбор тезисов.</p>
+                <p>Регистрация откроется в ближайшие дни.</p>
+                <p>С уважением, Ваш АНТОК</p>
               <% end %>
             </p>
             <br/>
@@ -26,9 +30,9 @@
                   <% end %>
                 <% end %>
               <% else %>
-                  <p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-large btn-success"%></p>
+                  <!--p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-large btn-success"%></p>
                   <p><%= t(:or) %></p>
-                  <p><%= link_to t(:sign_up), new_user_registration_path, class: "btn btn-large btn-success"%></p>                
+                  <p><%= link_to t(:sign_up), new_user_registration_path, class: "btn btn-large btn-success"%></p-->                
               <% end %>
             </div>   
           </div>
