--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,12 @@
             <!--p style="text-align:center;"><b><%= t(:welcome_myaksts)%></b></p-->
             <p style="text-align:center;">
               <% if params[:locale]=='en' %>
-                Personal AKSTS member page helps to automate interaction for conference and seminars!
+                <p style="text-align:center;"><b>2015 CONFERENCE IS COMING!</b></p>
+                <p>2015 Science and Technology AKSTS conference will  be from 19 to 21 of July 2015.</p>
+                <p>Conference will be hold in Moscow or Moscow territory. Conference will be in format CIS - Korea. Soon registration will be opened.</p>
+                <p>Sincerely Yours AKSTS</p>
               <% else %>
-                <p style="text-align:center;"><b>КОНФЕРЕНЦИЯ 2015 УЖЕ СКОРО!!!</b></p>
+                <p style="text-align:center;"><b>КОНФЕРЕНЦИЯ 2015 УЖЕ СКОРО!</b></p>
                 <p>Определены сроки проведения Ежегодной конференции по науке и технологиям, проводимой АНТОК - с 19 по 21 июля 2015 года.</p>
                 <p>Место поведения конференции - Москва или ближнее Подмосковье. Конференция планируется в формате СНГ - Корея. В ближайшее время будет открыта онлайн регистрация участников конференции и объявлен сбор тезисов.</p>
                 <p>Регистрация откроется в ближайшие дни.</p>
