--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
       <%= yield %> 
 
       <footer class="footer">
-          &copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2014
+          &copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2012 - 2015
         <nav>
           <ul>
             <li>
@@ -79,9 +79,8 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-52069476-1', 'aksts.ru');
+      ga('create', 'UA-62015636-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
