--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -26,6 +26,19 @@
       <%= f.label :conf_coauthors %><%= f.text_field :conf_coauthors %>
       <%= f.label :participation_type %><%= f.select :participation_type, 
           options_for_select([[t(:choose_value),""], [t(:participance), "Очное"], [t(:publications_only), "Заочное"]], :selected=> @applic.participation_type) %>
+      <h3><%= t(:compensation_info) %></h3>
+      
+      <%= f.label :need_compensation, :class => "checkbox inline" %> <%= f.check_box :need_compensation %>
+      <br/>
+      <br/>
+      <div id="compensation_info_block">
+        <div class="alert alert-info">
+           <%= t(:step2_compensation_info) %>
+       </div>
+        <%= f.label :inn %> <%= f.text_field :inn %>
+        <%= f.label :snils %> <%= f.text_field :snils %>
+        <%= f.label :registration %> <%= f.text_field :registration %>
+      </div>
        <div class="alert alert-info">
          <button type="button" class="close" data-dismiss="alert">&times;</button>
            <%= t(:step2_warning) %>
@@ -35,8 +48,8 @@
     <% end %>
   </div>
 </div>
-<script type="text/javascript">
+<!--script type="text/javascript">
  $(document).ready(function(){
    $('#applic_birth_date').datepicker({format: 'yyyy-mm-dd'});
 })
-</script>
+</script-->
